2010-10-06  Anatoly Sokolov  <aesok@post.ru>

	* doc/tm.texi.in (CLASS_LIKELY_SPILLED_P): Remove documentation.
	* doc/tm.texi.in: Regenerate.
	* system.h (CLASS_LIKELY_SPILLED_P): Poison.
	* targhooks.c (default_class_likely_spilled_p): Don't use the 
	CLASS_LIKELY_SPILLED_P macro.

	* config\arm\arm.md: Update comment.

2010-10-06  Jan Hubicka  <jh@suse.cz>

	* ipa.c (cgraph_remove_unreachable_nodes): External references can always
	be removed.
	(cgraph_externally_visible_p): We can not bring local comdats that are known
	to linker; fix handling of internal visibility.
	(function_and_variable_visibility): Likewise.

2010-10-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/45394
	* combine.c (cleanup_auto_inc_dec): Remove AFTER parameter and adjust.
	(struct rtx_subst_pair): Remove AFTER field.
	(propagate_for_debug_subst): Adjust call to cleanup_auto_inc_dec.
	(propagate_for_debug): Remove MOVE parameter and adjust.
	(try_combine): In the special case where I2 is a PARALLEL, combine only
	destinations of SETs and set I2SRC to the I2 source.
	Adjust calls to propagate_for_debug throughout.
	* reload1.c (eliminate_regs_1) <ASM_OPERANDS>: Do not abort for debug
	insns.

2010-10-06  Olivier Hainque  <hainque@adacore.com>

	* config/rs6000/rs6000.c (rs6000_expand_ternop_builtin): Rewrite
	switch on insn codes as sequence of ifs.

2010-10-06  Hariharan Sandanagobalane  <hariharan@picochip.com>

	* config/picochip/picochip.c (TARGET_EXCEPT_UNWIND_INFO): Define it to
	be UI_NONE for picochip.
	(picochip_option_override): Do not disable exception flags.
	* config/picochip/picochip-protos.h (picochip_except_unwind_info):
	Declare.

2010-10-06  Richard Guenther  <rguenther@suse.de>

	* Makefile.in (regmove.o): Depend on $(TARGET_H).

2010-10-06  Nicola Pero  <nicola.pero@meta-innovation.com>

	Implemented fast enumeration for Objective-C.	
	* c-parser.c (objc_could_be_foreach_context): New.
	(c_lex_one_token): Recognize RID_IN keyword in a potential