@@ -27,11 +27,11 @@ along with GCC; see the file COPYING3.  If not see
 #define TARGET_OS_CPP_BUILTINS()		\
   do						\
     {						\
-        builtin_define_std ("__X86__");		\
-        builtin_define_std ("__QNXNTO__");	\
-        builtin_define_std ("__QNX__");		\
-        builtin_define_std ("__ELF__");		\
-        builtin_define_std ("__LITTLEENDIAN__");\
+        builtin_define ("__X86__");		\
+        builtin_define ("__QNXNTO__");		\
+        builtin_define ("__QNX__");		\
+        builtin_define ("__ELF__");		\
+        builtin_define ("__LITTLEENDIAN__");	\
         builtin_assert ("system=qnx");		\
         builtin_assert ("system=qnxnto");	\
         builtin_assert ("system=nto");		\
