@@ -188,19 +188,19 @@ spu_resolve_overloaded_builtin (location_t loc, tree fndecl, void *passed_args)
 void
 spu_cpu_cpp_builtins (struct cpp_reader *pfile)
 {
-  builtin_define_std ("__SPU__");
+  cpp_define (pfile, "__SPU__");
   cpp_assert (pfile, "cpu=spu");
   cpp_assert (pfile, "machine=spu");
   if (spu_arch == PROCESSOR_CELLEDP)
-    builtin_define_std ("__SPU_EDP__");
-  builtin_define_std ("__vector=__attribute__((__spu_vector__))");
+    cpp_define (pfile, "__SPU_EDP__");
+  cpp_define (pfile, "__vector=__attribute__((__spu_vector__))");
   switch (spu_ea_model)
     {
     case 32:
-      builtin_define_std ("__EA32__");
+      cpp_define (pfile, "__EA32__");
       break;
     case 64:
-      builtin_define_std ("__EA64__");
+      cpp_define (pfile, "__EA64__");
       break;
     default:
        gcc_unreachable ();
